--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -461,14 +461,30 @@ legend {
   -webkit-transform: rotateY(180deg);
           transform: rotateY(180deg);
 }
+.card-inner:nth-child(1){
+  background-color: pink;
+}
+.card-inner:nth-child(2){
+  background-color: lightgreen;
+}
+.card-inner:nth-child(3){
+  background-color: lightblue;
+}
+.card-inner:nth-child(4){
+  background-color: purple;
+}
+.card-inner:nth-child(5){
+  background-color: red;
+}
+.card-inner:nth-child(6){
+  background-color: orange;
+}
 
 .side {
   position: absolute;
-  text-align: center;
   width: 100%;
   height: 100%;
-  padding: 20px 0;
-  color: #fff;
+  padding-top: 2em;
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
   -webkit-backface-visibility: hidden;
@@ -479,6 +495,7 @@ legend {
 }
 
 .card-content {
+  color: #000;
   -webkit-transform: translatez(70px) scale(0.8);
           transform: translatez(70px) scale(0.8);
 }
@@ -486,7 +503,8 @@ legend {
 .front {
   z-index: 2;
   background-size: cover;
-  background-image: url("../images/card-front.jpg");
+  background-color: #fff;
+  box-shadow: 5px 10px 10px #000;
 }
 
 .back {
@@ -494,7 +512,10 @@ legend {
           transform: rotateY(180deg);
   z-index: 0;
   background-size: cover;
-  background-image: url("../images/card-back.jpg");
+  box-shadow: 5px 10px 10px #000;
+}
+.back .card-content{
+  color: #fff;
 }
 
 .myNews {
@@ -821,7 +842,7 @@ legend {
 .contact-item__header.need::after {
   content: "必須";
   position: absolute;
-  top: 0;
+  top: -5px;
   right: 0;
   color: #fff;
   background-color: red;
@@ -1075,19 +1096,7 @@ legend {
   position: relative;
 }
 .service-req__txt:not(:first-child) {
-  margin-top: 24px;
-}
-.service-req__txt::before {
-  content: "";
-  position: absolute;
-  height: 0.7em;
-  width: 1.5em;
-  top: 0.3em;
-  left: -2em;
-  border-left: 5px solid red;
-  border-bottom: 5px solid red;
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
+  margin-top: 42px;
 }
 
 .service-item {
@@ -1100,27 +1109,25 @@ legend {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 70%;
-  margin-top: 80px;
+  width: 90%;
+  margin-top: 160px;
 }
 .service-item__img {
   width: 47%;
-  height: 350px;
+  height: 420px;
   position: relative;
 }
 .service-item__img img {
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   width: 100%;
   height: 100%;
-  border-radius: 32px;
-  -webkit-box-shadow: 0 0 20px gray;
-          box-shadow: 0 0 20px gray;
+  border-radius: 12px;
 }
 .service-item__img.first:after {
   content: "ヒアリング";
   position: absolute;
-  top: 0;
+  top: 0.2em;
   left: 0;
   width: 100%;
   text-align: center;
@@ -1131,7 +1138,7 @@ legend {
 .service-item__img.first:before {
   content: "Consulting";
   position: absolute;
-  top: -0.2em;
+  top: 0;
   left: 0;
   width: 100%;
   text-align: center;
@@ -1143,7 +1150,7 @@ legend {
 .service-item__img.second:after {
   content: "デザイン";
   position: absolute;
-  top: 0;
+  top: 0.2em;
   left: 0;
   width: 100%;
   text-align: center;
@@ -1154,7 +1161,7 @@ legend {
 .service-item__img.second:before {
   content: "Design";
   position: absolute;
-  top: -0.2em;
+  top: 0;
   left: 0;
   width: 100%;
   text-align: center;
@@ -1166,7 +1173,7 @@ legend {
 .service-item__img.third:after {
   content: "コーディング";
   position: absolute;
-  top: 0;
+  top: 0.2em;
   left: 0;
   width: 100%;
   text-align: center;
@@ -1177,7 +1184,7 @@ legend {
 .service-item__img.third:before {
   content: "Coding";
   position: absolute;
-  top: -0.2em;
+  top: 0;
   left: 0;
   width: 100%;
   text-align: center;
@@ -1189,7 +1196,7 @@ legend {
 .service-item__img.fourth:after {
   content: "アフターフォロー";
   position: absolute;
-  top: 0;
+  top: 0.2em;
   left: 0;
   width: 100%;
   text-align: center;
@@ -1200,7 +1207,7 @@ legend {
 .service-item__img.fourth:before {
   content: "FollowUp";
   position: absolute;
-  top: -0.2em;
+  top: 0;
   left: 0;
   width: 100%;
   text-align: center;
@@ -1211,7 +1218,7 @@ legend {
 }
 .service-item__txt {
   width: 40%;
-  font-size: 18px;
+  font-size: 24px;
   -webkit-transform: translateY(50px);
           transform: translateY(50px);
   -webkit-transition: 1s;
@@ -1331,8 +1338,9 @@ legend {
     top: 2px;
   }
   .service-item__txt {
-    width: 47%;
-    font-size: 12px;
+    width: 48%;
+    font-size: 16px;
+    text-align: center;
   }
 }
 .works-sec {
@@ -1363,7 +1371,7 @@ legend {
       align-content: space-between;
   width: 70%;
   height: 1000px;
-  margin: 80px 0;
+  margin: 0 0 80px 0;
   -webkit-column-gap: 32px;
      -moz-column-gap: 32px;
           column-gap: 32px;
@@ -1378,12 +1386,10 @@ legend {
      object-fit: cover;
 }
 .skill p {
-  width: 110%;
-  font-size: 40px;
+  width: 100%;
+  font-size: 32px;
   font-weight: bold;
   text-align: center;
-  -webkit-box-shadow: 4px 16px 20px -5px gray;
-          box-shadow: 4px 16px 20px -5px gray;
   margin-top: 4px;
   -webkit-transition: 0.2s;
   transition: 0.2s;
